--- a/src/components/LandingPage/landing.css
+++ b/src/components/LandingPage/landing.css
@@ -14,14 +14,17 @@ h1 {
 	font-weight: 700;
 	font-size: 5em;
 }
-
+h2 {
+	font-weight: 500;
+	font-size: 5em;
+}
 
 .content{
 	padding-top: 20%;
 	text-align: center;
 }
 
-.content h1, .content h3{
+.content h1, .content h3 , .content h2{
     text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
                  0px 8px 13px rgba(0,0,0,0.1),
                  0px 18px 23px rgba(0,0,0,0.1);
