--- a/src/components/LandingPage/landing.css
+++ b/src/components/LandingPage/landing.css
@@ -16,7 +16,7 @@ h1 {
 }
 h2 {
 	font-weight: 500;
-	font-size: 5em;
+	font-size: 4em;
 }
 
 .content{
@@ -31,7 +31,7 @@ h2 {
 }
 
 hr {
-    width: 400px;
+    width: 80%;
     border-top: 1px solid #f8f8f8;
     border-bottom: 1px solid rgba(0,0,0,0.2);
 }
